feat:支持回放POJO类方法